# xiaozhi_esp32_client_mqtt_udp

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  device_fingerprint.py  logger.py  ota.py  pyproject.toml  requirements.txt
.github/workflows/: build_image.yml
config/: default.yml  load.py
device/: display.py  session.py  status.py
protocol/: mqtt_protocol.py
snowboy/: snowboydecoder.py  snowboydetect.py
snowboy/resources/: xiaolai.pmdl
